--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<div id>Welcome to the world of Web development</div>
+	<div id = "add_to_me">Welcome to the world of Web development</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
