--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-	<div id = "Welcome to the world of Web development">
-
+	<div id = "add_to_me">
+		Welcome to the world of Web development
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
