--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div id = "add_to_me">
-		Welcome to the world of Web development
+		<h1>Welcome to the world of Web development</h1>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
