--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<div id = "add_to_me">
+	<div id = "text">
 		<h2>Welcome to the world of Web development</h2>
 	</div>
     <script type="text/javascript" src="./script.js">
