--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div id = "text">
-		<h2>Welcome to the world of Web development</h2>
+		Welcome to the world of Web development
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
